[package]
name = "actix_web_prime_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"